--- a/000000000000.cfg
+++ b/000000000000.cfg
@@ -4,7 +4,7 @@
 <!-- Configuration File Management white paper available from: -->
 <!-- http://www.polycom.com/common/documents/whitepapers/configuration_file_management_on_soundpoint_ip_phones.pdf -->
 <!-- $RCSfile$  $Revision: 155259 $ -->
-<APPLICATION MISC_FILES="" LOG_FILE_DIRECTORY="LOGS" OVERRIDES_DIRECTORY="OVERRIDES" CONTACTS_DIRECTORY="CONTACTS" LICENSE_DIRECTORY="LICENSE" USER_PROFILES_DIRECTORY="PROFILES" CALL_LISTS_DIRECTORY="CALLLISTS" COREFILE_DIRECTORY="COREDUMPS">
+<APPLICATION MISC_FILES="" LOG_FILE_DIRECTORY="LOGS" OVERRIDES_DIRECTORY="OVERRIDES" CONTACTS_DIRECTORY="CONTACTS" LICENSE_DIRECTORY="LICENCE" USER_PROFILES_DIRECTORY="PROFILES" CALL_LISTS_DIRECTORY="CALLLISTS" COREFILE_DIRECTORY="COREDUMPS">
   <Software APP_FILE_PATH="FIRMWARE-VVX/5.8.0.12386-June2018/sip.ld" APP_FILE_PATH_Trio8800="FIRMWARE-TRIO/5.7.1.4095/sip.ld" />
   <Configuration CONFIG_FILES="customisations.cfg" CONFIG_FILES_Trio8800="custom-trio.cfg" />
 </APPLICATION>
