--- a/trio-usb.cfg
+++ b/trio-usb.cfg
@@ -8,15 +8,16 @@
     <!-- Set the Base Profile to SfB *USB mode* -->
     <!-- Refer: https://documents.polycom.com/bundle/trio-sfb-dg-553/page/Skype_for_Business_Deployment_Guide/CallControls/TOC_USB_Mode_for_Skype_Room_2.htm -->
     <device device.set="1" device.baseProfile="SkypeUSB" device.baseProfile.set="1" />
-    <bg homeScreen.customLabel="greiginsydney.com" homeScreen.labelType="Custom" homeScreen.labelLocation="BelowDate" />
+    <bg homeScreen.customLabel="#YourBrandHere#" homeScreen.labelType="Custom" homeScreen.labelLocation="BelowDate" />
+    <!-- Set to a 1 to enable Hold and Resume buttons during USB calls -->
+    <voice.usb.holdResume.enable="0" />
     <!-- Misc : a Warning Level of "1" suppresses the display of nuisance warnings (like the downstream PC is disconnected) -->
     <up up.warningLevel="1" />
     <!-- "0" gives a 12-hour clock, "1" is 24. The admin guide has more clock & time/date display options -->
     <lcl lcl.datetime.time.24HourClock="1" />
-    <!-- Volume persist settings: a "1" will retain the volume settings after each call -->
-    <voice voice.volume.persist.handset="1" voice.volume.persist.headset="1" voice.volume.persist.handsfree="1" />
     <!-- Passwords and Security -->
     <sec sec.pwd.length.admin="3" sec.pwd.length.user="3" sec.tagSerialNo="1" />
+    <!-- Customise the Admin Password to your own environment: -->
     <device device.auth.localAdminPassword="4566" device.auth.localAdminPassword.set="1" />
     <device device.prov.tagSerialNo="1" />
     <!-- Automatic overnight config checks (improves device security) -->
