--- a/customisations.cfg
+++ b/customisations.cfg
@@ -118,12 +118,13 @@
   <up up.DIDformat="numberOnly" />
   
   <!-- Water these down if you encounter problems with SRTP like this: http://www.wavecoreit.com/blog/serverconfig/proxy-side-media-negotiation-failed-polycom-vvx-call-transfer-failure/ -->
- <reg reg.1.srtp.enable="1" reg.1.srtp.offer="1" reg.1.srtp.require="1" />
- <!-- Enable the usual voice codecs.  -->
+  <reg reg.1.srtp.enable="1" reg.1.srtp.offer="1" reg.1.srtp.require="1" />
+  <!-- Enable the usual voice codecs.  -->
   <voice voice.codecPref.G722="1" voice.codecPref.G711_Mu="2" voice.codecPref.G711_A="3" />
   <!-- Passwords and Security -->
   <sec sec.pwd.length.admin="3" sec.pwd.length.user="3" sec.tagSerialNo="1" />
-  <device device.auth.localAdminPassword="456" device.auth.localAdminPassword.set="1" />
+  <!-- Customise the Admin Password to your own environment: -->
+  <device device.auth.localAdminPassword="4566" device.auth.localAdminPassword.set="1" />
   <device device.prov.tagSerialNo="1" />
   <!-- Automatic overnight config checks (improves device security) -->
   <prov prov.polling.enabled="1" prov.polling.mode="random" prov.polling.period="86400" prov.polling.time="01:00" prov.polling.timeRandomEnd="05:00" />
@@ -133,21 +134,18 @@
   <log log.render.level="6" log.render.file.upload.append.sizeLimit="128" />
   <!-- We definitely don't want call recording on! -->
   <feature feature.callRecording.enabled="0" />
-<!-- Tweak the QoS values & RTP media port as required -->
+  <!-- Tweak the QoS values & RTP media port as required -->
   <qos qos.ethernet.tcpQosEnabled="1" qos.ethernet.callControl.user_priority="5" qos.ethernet.other.user_priority="2" qos.ethernet.rtp.user_priority="2" qos.ethernet.rtp.video.user_priority="5" qos.ip.callControl.dscp="40" qos.ip.rtp.dscp="46" qos.ip.rtp.video.dscp="34" />
-<tcpIpApp tcpIpApp.port.rtp.mediaPortRangeStart="5350" tcpIpApp.port.rtp.mediaPortRangeEnd = "5390" tcpIpApp.port.rtp.videoPortRange.enable="1" tcpIpApp.port.rtp.videoPortRangeStart="5391" tcpIpApp.port.rtp.videoPortRangeEnd="5430" />
+  <tcpIpApp tcpIpApp.port.rtp.mediaPortRangeStart="5350" tcpIpApp.port.rtp.mediaPortRangeEnd = "5390" tcpIpApp.port.rtp.videoPortRange.enable="1" tcpIpApp.port.rtp.videoPortRangeStart="5391" tcpIpApp.port.rtp.videoPortRangeEnd="5430" />
 
+  <httpd httpd.enabled="1" httpd.cfg.enabled="1" httpd.cfg.secureTunnelRequired="1" httpd.cfg.secureTunnelPort="4443" httpd.ta.enabled="1"/>
 
-<httpd httpd.enabled="1" httpd.cfg.enabled="1" httpd.cfg.secureTunnelRequired="1" httpd.cfg.secureTunnelPort="4443" httpd.ta.enabled="1"/>
-
-<!-- Use these to add support for James' fantastic "VVX Manager" GUI tool (http://www.myskypelab.com/2015/10/skype-for-business-lync-polycom-vvx.html) -->
-<apps apps.restapi.enabled="1" />
-<apps.push apps.push.alertSound="1" apps.push.messageType="5" apps.push.serverRootURL="push" apps.push.password="vvxmanager" apps.push.username="vvxmanager" apps.push.secureTunnelPort="4443" />
-
+  <!-- Use these to add support for James' fantastic "VVX Manager" GUI tool (http://www.myskypelab.com/2015/10/skype-for-business-lync-polycom-vvx.html) -->
+  <apps apps.restapi.enabled="1" />
+  <apps.push apps.push.alertSound="1" apps.push.messageType="5" apps.push.serverRootURL="push" apps.push.password="vvxmanager" apps.push.username="vvxmanager" apps.push.secureTunnelPort="4443" />
 
   <!-- When all else fails, enable syslog! 0=debug, 6=only the nastiest crashes-->
   <!-- <device device.syslog.serverName="#YourSyslogServer#" device.syslog.transport="UDP" device.syslog.renderLevel="6" /> -->
-
 
 </customisations>
 </polycomConfig>
