Changed browser default setting
Enabled access to the phone's browser by default, but moved to HTTPS & port 4443.

--- a/customisations.cfg
+++ b/customisations.cfg
@@ -31,10 +31,6 @@
   <!-- Power Saving : set this to a "0" to stop the MWI LED pulsing a heartbeat while the phone's asleep -->
   <ind ind.pattern.powerSaving.step.1.state="0" />
   
-  <!-- Disable access to the phone's website. The second line will force HTTPS over port 4443 *if* you enable it -->
-  <httpd httpd.enabled="0" httpd.cfg.enabled="0"
-  httpd.cfg.secureTunnelRequired="1" httpd.cfg.secureTunnelPort="4443" />
-
   <!-- Misc : a Warning Level of 1 suppresses the display of nuisance warnings (like the downstream PC is disconnected) -->
   <up up.warningLevel="1" />
   <!-- Want the phone to lock when running BToE to a PC? Set deviceLock.enable to a 1, but beware it triggers a user prompt for a local unlock PIN -->
@@ -138,6 +134,7 @@
   <qos qos.ethernet.tcpQosEnabled="1" qos.ethernet.callControl.user_priority="5" qos.ethernet.other.user_priority="2" qos.ethernet.rtp.user_priority="2" qos.ethernet.rtp.video.user_priority="5" qos.ip.callControl.dscp="40" qos.ip.rtp.dscp="46" qos.ip.rtp.video.dscp="34" />
   <tcpIpApp tcpIpApp.port.rtp.mediaPortRangeStart="5350" tcpIpApp.port.rtp.mediaPortRangeEnd = "5390" tcpIpApp.port.rtp.videoPortRange.enable="1" tcpIpApp.port.rtp.videoPortRangeStart="5391" tcpIpApp.port.rtp.videoPortRangeEnd="5430" />
 
+  <!-- Enable access to the phone's website, but force HTTPS & move it to port 4443 -->
   <httpd httpd.enabled="1" httpd.cfg.enabled="1" httpd.cfg.secureTunnelRequired="1" httpd.cfg.secureTunnelPort="4443" httpd.ta.enabled="1"/>
 
   <!-- Use these to add support for James' fantastic "VVX Manager" GUI tool (http://www.myskypelab.com/2015/10/skype-for-business-lync-polycom-vvx.html) -->
