Changed browser default
Changed browser default - now consistent with the other 2 device types

--- a/trio-usb.cfg
+++ b/trio-usb.cfg
@@ -25,8 +25,8 @@
     <VoIpProt voIpProt.SIP.specialEvent.checkSync.alwaysReboot="1" />
     <!-- Minimise logging uploads -->
     <log log.render.level="6" log.render.file.upload.append.sizeLimit="128" />
-    <!-- Enable access to the phone's website, but over 4443 -->
-    <httpd httpd.enabled="1" httpd.cfg.enabled="1" httpd.cfg.secureTunnelEnabled="1" httpd.cfg.secureTunnelRequired="0" httpd.cfg.secureTunnelPort="4443" httpd.ta.enabled="1" />
+    <!-- Enable access to the phone's website, but force HTTPS & move it to port 4443 -->
+  <httpd httpd.enabled="1" httpd.cfg.enabled="1" httpd.cfg.secureTunnelRequired="1" httpd.cfg.secureTunnelPort="4443" httpd.ta.enabled="1"/>
     <!-- Use these to add support for James' fantastic "VVX Manager" GUI tool (http://www.myskypelab.com/2015/10/skype-for-business-lync-polycom-vvx.html) -->
     <apps apps.restapi.enabled="1" />
     <apps.push apps.push.alertSound="1" apps.push.messageType="5" apps.push.serverRootURL="push" apps.push.username="vvxmanager" apps.push.password="vvxmanager" apps.push.secureTunnelPort="4443" />
