Added more models to the background images
Added VVX 400, 401 & 6xx to the bg.color section

--- a/customisations.cfg
+++ b/customisations.cfg
@@ -20,8 +20,9 @@
   
   <!-- Specify background image and browser (Application) settings -->
   <!-- For more details on the image requirements see https://greiginsydney.com/optimising-polycom-vvx-background-images/ -->
-  <bg bg.color.VVX410.selection="2,1" bg.color.VVX411.selection="2,1" bg.color.bm.1.name="#Your410Background.jpg#" />
+  <bg bg.color.VVX400.selection="2,1" bg.color.VVX401.selection="2,1" bg.color.VVX410.selection="2,1" bg.color.VVX411.selection="2,1" bg.color.bm.1.name="#Your410Background.jpg#" />
   <bg bg.color.VVX500.selection="2,2" bg.color.VVX501.selection="2,2" bg.color.bm.2.name="#Your500Background.jpg#" />
+  <bg bg.color.VVX600.selection="2,3" bg.color.VVX601.selection="2,3" bg.color.bm.3.name="#Your600Background.jpg#" />
     
   <!-- Power Saving : force "office hours" 24x7 & sleep after 10 minutes -->
   <powerSaving powerSaving.enable="1" />
