Fixed XML bug in voice.usb.holdResume.enable
Fixed XML bug in voice.usb.holdResume.enable

--- a/trio-usb.cfg
+++ b/trio-usb.cfg
@@ -10,7 +10,7 @@
     <device device.set="1" device.baseProfile="SkypeUSB" device.baseProfile.set="1" />
     <bg homeScreen.customLabel="#YourBrandHere#" homeScreen.labelType="Custom" homeScreen.labelLocation="BelowDate" />
     <!-- Set to a 1 to enable Hold and Resume buttons during USB calls -->
-    <voice.usb.holdResume.enable="0" />
+    <voice voice.usb.holdResume.enable="0" />
     <!-- Misc : a Warning Level of "1" suppresses the display of nuisance warnings (like the downstream PC is disconnected) -->
     <up up.warningLevel="1" />
     <!-- "0" gives a 12-hour clock, "1" is 24. The admin guide has more clock & time/date display options -->
