Commented-out the "lock" section
Commented-out the "lock" section: no point having a LOCK soft-key if the feature's disabled.

--- a/customisations.cfg
+++ b/customisations.cfg
@@ -77,9 +77,9 @@
 	<!-- Align softkeys with home-screen. Disabling here removes ALL references everywhere -->
 	<feature feature.doNotDisturb.enable="0" feature.forward.enable="0" />
   
-  <!-- Give the user the ability to lock their phone. (Auto-lock is disabled here, but an option) -->
-  <phoneLock phoneLock.enabled="0" phoneLock.authorized.1.description="Taxi" phoneLock.authorized.1.value="+6112345678" phoneLock.authorized.2.description="Pizza" phoneLock.authorized.2.value="+61270001223"/>
-  <softkey softkey.2.enable="1" softkey.2.label="Lock" softkey.2.use.idle="1" softkey.2.action="$FLockPhone$" softkey.2.precede="0" />
+  <!-- Give the user the ability to lock their phone. (Un-comment the below to enable, but don't forget to customise or remove the authorised destinations) -->
+  <!-- <phoneLock phoneLock.enabled="1" phoneLock.authorized.1.description="Taxi" phoneLock.authorized.1.value="+6112345678" phoneLock.authorized.2.description="Pizza" phoneLock.authorized.2.value="+61270001223"/> -->
+  <!-- <softkey softkey.2.enable="1" softkey.2.label="Lock" softkey.2.use.idle="1" softkey.2.action="$FLockPhone$" softkey.2.precede="0" /> -->
   
   <!-- Set the "Messages" key to call Voicemail. Change "#UM-ContactAddress#@contoso.com" below to the SIP Address of your get-CsExUmContact -->
   <msg>
