Disabled physical keys on the devices
Disabled physical keys on the devices.
With this config you won't be able to do NADA but lift the handset and call the hard-coded number.

--- a/courtesy.cfg
+++ b/courtesy.cfg
@@ -78,13 +78,91 @@
 	<!-- Align softkeys with home-screen. Disabling here removes ALL references everywhere -->
 	<feature feature.doNotDisturb.enable="0" feature.forward.enable="0" />
   
+    <!-- Disable all the physical keys. Search "defining the phone key layout" in the Admin Guide -->
+  <!-- The ONLY keys left enabled are the digit keys, *, # & vol up/down. Add these if required -->
+  <key key.VVX201.2.function.prim="null"  key.VVX201.7.function.prim="null" key.VVX201.8.function.prim="null" key.VVX201.9.function.prim="null" 
+		key.VVX201.11.function.prim="null" key.VVX201.12.function.prim="null" key.VVX201.13.function.prim="null" />
+  
+  <key key.VVX300.3.function.prim="null" key.VVX300.4.function.prim="null" key.VVX300.10.function.prim="null" key.VVX300.11.function.prim="null" 
+		key.VVX300.12.function.prim="null" key.VVX300.13.function.prim="null" key.VVX300.14.function.prim="null" key.VVX300.18.function.prim="null" 
+		key.VVX300.19.function.prim="null" key.VVX300.20.function.prim="null" key.VVX300.21.function.prim="null" key.VVX300.26.function.prim="null" 
+		key.VVX300.27.function.prim="null" key.VVX300.28.function.prim="null" key.VVX300.29.function.prim="null" key.VVX300.31.function.prim="null" 
+		key.VVX300.32.function.prim="null" key.VVX300.33.function.prim="null" key.VVX300.34.function.prim="null" key.VVX300.51.function.prim="null" 
+		key.VVX300.52.function.prim="null" key.VVX300.53.function.prim="null" 
+	/>
+  <key key.VVX301.3.function.prim="null" key.VVX301.4.function.prim="null" key.VVX301.10.function.prim="null" key.VVX301.11.function.prim="null" 
+		key.VVX301.12.function.prim="null" key.VVX301.13.function.prim="null" key.VVX301.14.function.prim="null" key.VVX301.18.function.prim="null" 
+		key.VVX301.19.function.prim="null" key.VVX301.20.function.prim="null" key.VVX301.21.function.prim="null" key.VVX301.26.function.prim="null" 
+		key.VVX301.27.function.prim="null" key.VVX301.28.function.prim="null" key.VVX301.29.function.prim="null" key.VVX301.31.function.prim="null" 
+		key.VVX301.32.function.prim="null" key.VVX301.33.function.prim="null" key.VVX301.34.function.prim="null" key.VVX301.51.function.prim="null" 
+		key.VVX301.52.function.prim="null" key.VVX301.53.function.prim="null" 
+	/>
+  <key key.VVX310.3.function.prim="null" key.VVX310.4.function.prim="null" key.VVX310.10.function.prim="null" key.VVX310.11.function.prim="null" 
+		key.VVX310.12.function.prim="null" key.VVX310.13.function.prim="null" key.VVX310.14.function.prim="null" key.VVX310.18.function.prim="null" 
+		key.VVX310.19.function.prim="null" key.VVX310.20.function.prim="null" key.VVX310.21.function.prim="null" key.VVX310.26.function.prim="null" 
+		key.VVX310.27.function.prim="null" key.VVX310.28.function.prim="null" key.VVX310.29.function.prim="null" key.VVX310.31.function.prim="null" 
+		key.VVX310.32.function.prim="null" key.VVX310.33.function.prim="null" key.VVX310.34.function.prim="null" key.VVX310.51.function.prim="null" 
+		key.VVX310.52.function.prim="null" key.VVX310.53.function.prim="null" 
+	/>
+  <key key.VVX311.3.function.prim="null" key.VVX311.4.function.prim="null" key.VVX311.10.function.prim="null" key.VVX311.11.function.prim="null" 
+		key.VVX311.12.function.prim="null" key.VVX311.13.function.prim="null" key.VVX311.14.function.prim="null" key.VVX311.18.function.prim="null" 
+		key.VVX311.19.function.prim="null" key.VVX311.20.function.prim="null" key.VVX311.21.function.prim="null" key.VVX311.26.function.prim="null" 
+		key.VVX311.27.function.prim="null" key.VVX311.28.function.prim="null" key.VVX311.29.function.prim="null" key.VVX311.31.function.prim="null" 
+		key.VVX311.32.function.prim="null" key.VVX311.33.function.prim="null" key.VVX311.34.function.prim="null" key.VVX311.51.function.prim="null" 
+		key.VVX311.52.function.prim="null" key.VVX311.53.function.prim="null" 
+	/>
+  
+   <key key.VVX400.3.function.prim="null" key.VVX400.4.function.prim="null" key.VVX400.10.function.prim="null" key.VVX400.11.function.prim="null" 
+		key.VVX400.12.function.prim="null" key.VVX400.13.function.prim="null" key.VVX400.14.function.prim="null" key.VVX400.18.function.prim="null" 
+		key.VVX400.19.function.prim="null" key.VVX400.20.function.prim="null" key.VVX400.21.function.prim="null" key.VVX400.26.function.prim="null" 
+		key.VVX400.27.function.prim="null" key.VVX400.28.function.prim="null" key.VVX400.29.function.prim="null" key.VVX400.31.function.prim="null" 
+		key.VVX400.32.function.prim="null" key.VVX400.33.function.prim="null" key.VVX400.34.function.prim="null" key.VVX400.35.function.prim="null" 
+		key.VVX400.36.function.prim="null" key.VVX400.37.function.prim="null" key.VVX400.51.function.prim="null" key.VVX400.52.function.prim="null" 
+		key.VVX400.53.function.prim="null" key.VVX400.54.function.prim="null" key.VVX400.55.function.prim="null" key.VVX400.56.function.prim="null" 
+  />
+   <key key.VVX401.3.function.prim="null" key.VVX401.4.function.prim="null" key.VVX401.10.function.prim="null" key.VVX401.11.function.prim="null" 
+		key.VVX401.12.function.prim="null" key.VVX401.13.function.prim="null" key.VVX401.14.function.prim="null" key.VVX401.18.function.prim="null" 
+		key.VVX401.19.function.prim="null" key.VVX401.20.function.prim="null" key.VVX401.21.function.prim="null" key.VVX401.26.function.prim="null" 
+		key.VVX401.27.function.prim="null" key.VVX401.28.function.prim="null" key.VVX401.29.function.prim="null" key.VVX401.31.function.prim="null" 
+		key.VVX401.32.function.prim="null" key.VVX401.33.function.prim="null" key.VVX401.34.function.prim="null" key.VVX401.35.function.prim="null" 
+		key.VVX401.36.function.prim="null" key.VVX401.37.function.prim="null" key.VVX401.51.function.prim="null" key.VVX401.52.function.prim="null" 
+		key.VVX401.53.function.prim="null" key.VVX401.54.function.prim="null" key.VVX401.55.function.prim="null" key.VVX401.56.function.prim="null" 
+  />
+   <key key.VVX410.3.function.prim="null" key.VVX410.4.function.prim="null" key.VVX410.10.function.prim="null" key.VVX410.11.function.prim="null" 
+		key.VVX410.12.function.prim="null" key.VVX410.13.function.prim="null" key.VVX410.14.function.prim="null" key.VVX410.18.function.prim="null" 
+		key.VVX410.19.function.prim="null" key.VVX410.20.function.prim="null" key.VVX410.21.function.prim="null" key.VVX410.26.function.prim="null" 
+		key.VVX410.27.function.prim="null" key.VVX410.28.function.prim="null" key.VVX410.29.function.prim="null" key.VVX410.31.function.prim="null" 
+		key.VVX410.32.function.prim="null" key.VVX410.33.function.prim="null" key.VVX410.34.function.prim="null" key.VVX410.35.function.prim="null" 
+		key.VVX410.36.function.prim="null" key.VVX410.37.function.prim="null" key.VVX410.51.function.prim="null" key.VVX410.52.function.prim="null" 
+		key.VVX410.53.function.prim="null" key.VVX410.54.function.prim="null" key.VVX410.55.function.prim="null" key.VVX410.56.function.prim="null" 
+  />
+   <key key.VVX411.3.function.prim="null" key.VVX411.4.function.prim="null" key.VVX411.10.function.prim="null" key.VVX411.11.function.prim="null" 
+		key.VVX411.12.function.prim="null" key.VVX411.13.function.prim="null" key.VVX411.14.function.prim="null" key.VVX411.18.function.prim="null" 
+		key.VVX411.19.function.prim="null" key.VVX411.20.function.prim="null" key.VVX411.21.function.prim="null" key.VVX411.26.function.prim="null" 
+		key.VVX411.27.function.prim="null" key.VVX411.28.function.prim="null" key.VVX411.29.function.prim="null" key.VVX411.31.function.prim="null" 
+		key.VVX411.32.function.prim="null" key.VVX411.33.function.prim="null" key.VVX411.34.function.prim="null" key.VVX411.35.function.prim="null" 
+		key.VVX411.36.function.prim="null" key.VVX411.37.function.prim="null" key.VVX411.51.function.prim="null" key.VVX411.52.function.prim="null" 
+		key.VVX411.53.function.prim="null" key.VVX411.54.function.prim="null" key.VVX411.55.function.prim="null" key.VVX411.56.function.prim="null" 
+  />
+
+ <key key.VVX500.11.function.prim="null" key.VVX500.12.function.prim="null" key.VVX500.18.function.prim="null" key.VVX500.26.function.prim="null"          
+  />
+ <key key.VVX501.11.function.prim="null" key.VVX501.12.function.prim="null" key.VVX501.18.function.prim="null" key.VVX501.26.function.prim="null"          
+  />
+  
+  <key key.VVX600.11.function.prim="null" key.VVX600.12.function.prim="null" key.VVX600.18.function.prim="null" key.VVX600.26.function.prim="null"          
+  />
+  <key key.VVX601.11.function.prim="null" key.VVX601.12.function.prim="null" key.VVX601.18.function.prim="null" key.VVX601.26.function.prim="null"          
+  />
+  
+  <!-- Autodial/Hotline to Switchboard / etc -->
+  <call call.autoOffHook.1.enabled="1" call.autoOffHook.1.contact="#YourSwitchboardNumberHere#" />
+  
     <!-- Enable the phone's inbuilt MOH and fix the Sonus MOH bug. Thank you James: http://www.myskypelab.com/2016/10/polycom-vvx-hold-issue-with-sonus.html -->
   <feature feature.moh.enabled="1" feature.moh.filename="Polycom-hold.wav" feature.moh.payload="60" />
   <res res.quotas.tone="1000" />
   
-  <!-- Remove the default US E.911 values (obviously, *delete* this section for US locations!!) Please TEST it before putting the phone into production! -->
-  <dialplan dialplan.1.e911dialmask="112" dialplan.1.e911dialstring="000" dialplan.routing.emergency.1.value="1231" />
-  <!-- Just dial any unknown number strings after 4s. Let Lync handle it... -->
+  <!-- Just dial any unknown number strings after 4s. Let the server  handle it... -->
   <dialplan dialplan.impossibleMatchHandling="3" dialplan.impossibleMatchHandling.timeOut="4" />
   <!-- "0" disables the picture frame in the VVX500 and 1500 (otherwise on by default) -->
   <feature feature.pictureFrame.enabled="0" />
