Disable AUX and USB ports
Disable AUX and USB ports

--- a/courtesy.cfg
+++ b/courtesy.cfg
@@ -155,6 +155,10 @@
   <key key.VVX601.11.function.prim="null" key.VVX601.12.function.prim="null" key.VVX601.18.function.prim="null" key.VVX601.26.function.prim="null"          
   />
   
+  <!-- Disable USB ports (where applicable) and the AUX port -->
+  <device device.auxPort.enable="0" device.auxPort.enable.set="1" />
+  <feature feature.usbTop.power.enabled="0" feature.usbRear.power.enabled="0" />
+
   <!-- Autodial/Hotline to Switchboard / etc -->
   <call call.autoOffHook.1.enabled="1" call.autoOffHook.1.contact="#YourSwitchboardNumberHere#" />
   
