--- a/courtesy.cfg
+++ b/courtesy.cfg
@@ -158,6 +158,7 @@
   <!-- Disable USB ports (where applicable) and the AUX port -->
   <device device.auxPort.enable="0" device.auxPort.enable.set="1" />
   <feature feature.usbTop.power.enabled="0" feature.usbRear.power.enabled="0" />
+  <video video.enable="0" />
 
   <!-- Autodial/Hotline to Switchboard / etc -->
   <call call.autoOffHook.1.enabled="1" call.autoOffHook.1.contact="#YourSwitchboardNumberHere#" />
