--- a/courtesy.cfg
+++ b/courtesy.cfg
@@ -160,6 +160,9 @@
   <feature feature.usbTop.power.enabled="0" feature.usbRear.power.enabled="0" />
   <video video.enable="0" />
 
+  <!-- Disable Bluetooth -->
+  <feature feature.VVX600.bluetooth.enabled="0" feature.VVX601.bluetooth.enabled="0" />
+
   <!-- Autodial/Hotline to Switchboard / etc -->
   <call call.autoOffHook.1.enabled="1" call.autoOffHook.1.contact="#YourSwitchboardNumberHere#" />
   
