Disabled the daisy-chain Ethernet port
Added device.net.etherModePC="Disabled" to disable the daisy-chain Ethernet port.

--- a/courtesy.cfg
+++ b/courtesy.cfg
@@ -155,8 +155,8 @@
   <key key.VVX601.11.function.prim="null" key.VVX601.12.function.prim="null" key.VVX601.18.function.prim="null" key.VVX601.26.function.prim="null"          
   />
   
-  <!-- Disable USB ports (where applicable) and the AUX port -->
-  <device device.auxPort.enable="0" device.auxPort.enable.set="1" />
+  <!-- Disable USB ports (where applicable), the AUX port and the daisy-chain Ethernet port -->
+  <device device.auxPort.enable="0" device.auxPort.enable.set="1" device.net.etherModePC="Disabled" device.net.etherModePC.set="1" />
   <feature feature.usbTop.power.enabled="0" feature.usbRear.power.enabled="0" />
   <video video.enable="0" />
 
