Updated release date info in the header

--- a/courtesy.cfg
+++ b/courtesy.cfg
@@ -3,7 +3,7 @@
 <!-- =========================================================================================== -->
 <!-- courtesy.cfg - a courtesy phone, perhaps in a public area. From https://greiginsydney.com/  -->
 <!-- ================== Also https://github.com/greiginsydney/000000000000.cfg ================= -->
-<!-- ============== This unpublished version last revised 23rd August 2018 ===================== -->
+<!-- ==================== This version last revised 26th August 2018 =========================== -->
 <!-- ====== Delete all the comments from your final config file for network efficiencies! ====== -->
 <!-- =========================================================================================== -->
 <customisations>
