Hid "SignIn" & updated blog link.
Hid "SignIn". You need to sign in via the browser.

--- a/courtesy.cfg
+++ b/courtesy.cfg
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <polycomConfig xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:noNamespaceSchemaLocation="Config/polycomConfig.xsd">
 <!-- =========================================================================================== -->
-<!-- courtesy.cfg - a courtesy phone, perhaps in a public area. From https://greiginsydney.com/  -->
+<!-- ================ courtesy.cfg - a courtesy phone, perhaps in a public area ================ -->
+<!-- ===================== https://greiginsydney.com/a-vvx-courtesy-phone/ ===================== -->
 <!-- ================== Also https://github.com/greiginsydney/000000000000.cfg ================= -->
 <!-- ==================== This version last revised 26th August 2018 =========================== -->
 <!-- ====== Delete all the comments from your final config file for network efficiencies! ====== -->
@@ -54,7 +55,7 @@
 	
   <!-- Hide Sign-in/out options -->
   <softkey softkey.feature.simplifiedSignIn="1" />
-  <feature feature.lync.hideSignInSignOut="0" feature.lync.hideSignOut="1" />
+  <feature feature.lync.hideSignInSignOut="1" feature.lync.hideSignOut="1" />
   
   <!-- If your're entirely on-prem, a 0 here will hide the Web Sign-in option -->
   <feature feature.webSignIn.enabled="0" />
