Zapped 2 typos in comment text

--- a/courtesy.cfg
+++ b/courtesy.cfg
@@ -57,7 +57,7 @@
   <softkey softkey.feature.simplifiedSignIn="1" />
   <feature feature.lync.hideSignInSignOut="1" feature.lync.hideSignOut="1" />
   
-  <!-- If your're entirely on-prem, a 0 here will hide the Web Sign-in option -->
+  <!-- If you're entirely on-prem, a 0 here will hide the Web Sign-in option -->
   <feature feature.webSignIn.enabled="0" />
     
 	<!-- Turn EVERYTHING off -->
@@ -171,7 +171,7 @@
   <feature feature.moh.enabled="1" feature.moh.filename="Polycom-hold.wav" feature.moh.payload="60" />
   <res res.quotas.tone="1000" />
   
-  <!-- Just dial any unknown number strings after 4s. Let the server  handle it... -->
+  <!-- Just dial any unknown number strings after 4s. Let the server handle it... -->
   <dialplan dialplan.impossibleMatchHandling="3" dialplan.impossibleMatchHandling.timeOut="4" />
   <!-- "0" disables the picture frame in the VVX500 and 1500 (otherwise on by default) -->
   <feature feature.pictureFrame.enabled="0" />
