Zapped a typo in comment text

--- a/custom-trio.cfg
+++ b/custom-trio.cfg
@@ -34,7 +34,7 @@
   <!-- Hide Sign-in/out options for a device that's meant to be left signed in. Hide by setting simplifiedSignIn to 0 and hideSignOutout to 1: -->
   <softkey softkey.feature.simplifiedSignIn="1" />
   <feature feature.lync.hideSignInSignOut="0" feature.lync.hideSignOut="0" />
-  <!-- If your're entirely on-prem, a 0 here will hide the Web Sign-in option -->
+  <!-- If you're entirely on-prem, a 0 here will hide the Web Sign-in option -->
   <feature feature.webSignIn.enabled="0" />
 	
   <!-- Exchange integration. If you set a URL, it takes priority over auto-discover. Set reminderEnabled to a "1" to enable on-screen prompts for upcoming meetings. Find more options in the Admin guide -->
