Zapped typos in comment text

--- a/customisations.cfg
+++ b/customisations.cfg
@@ -52,7 +52,7 @@
   <softkey softkey.feature.simplifiedSignIn="1" />
   <feature feature.lync.hideSignInSignOut="0" feature.lync.hideSignOut="0" />
   
-  <!-- If your're entirely on-prem, a 0 here will hide the Web Sign-in option -->
+  <!-- If you're entirely on-prem, a 0 here will hide the Web Sign-in option -->
   <feature feature.webSignIn.enabled="0" />
   
   <!-- Add a redial button -->
@@ -98,7 +98,7 @@
   
   <!-- Remove the default US E.911 values (obviously, *delete* this section for US locations!!) Please TEST it before putting the phone into production! -->
   <dialplan dialplan.1.e911dialmask="112" dialplan.1.e911dialstring="000" dialplan.routing.emergency.1.value="000" />
-  <!-- Just dial any unknown number strings after 4s. Let Lync handle it... -->
+  <!-- Just dial any unknown number strings after 4s. Let the server handle it... -->
   <dialplan dialplan.impossibleMatchHandling="3" dialplan.impossibleMatchHandling.timeOut="4" />
   <!-- "0" disables the picture frame in the VVX500 and 1500 (otherwise on by default) -->
   <feature feature.pictureFrame.enabled="0" />
