--- a/wifi.cfg
+++ b/wifi.cfg
@@ -8,6 +8,8 @@
   <wifi>
     <device>
       <device.wifi device.wifi.enabled="1" device.wifi.enabled.set="1" device.wifi.dhcpEnabled="1" device.wifi.dhcpEnabled.set="1" device.wifi.ssid="##YourSSID##" device.wifi.ssid.set="1" device.wifi.securityMode="WPA2-PSK" device.wifi.securityMode.set="1" />
+      <!-- Make sure you leave "radio.bandxxx.enable.set" 1 and then enable or disable the 2.4 or 5G bands with their "bandxxx.enable=" parameters. -->
+	    <!-- regulatoryDomain = 0 (Global), 1 (US) and 2 (EU) -->
       <device.wifi.radio device.wifi.radio.regulatoryDomain="0" device.wifi.radio.regulatoryDomain.set="1" device.wifi.radio.band2_4GHz.enable="0" device.wifi.radio.band2_4GHz.enable.set="1" device.wifi.radio.band5GHz.enable="1" device.wifi.radio.band5GHz.enable.set="1" />
       <device.wifi.psk device.wifi.psk.keyType="1" device.wifi.psk.keyType.set="1" device.wifi.psk.key="##YourWi-FiPassword##" device.wifi.psk.key.set="1" />
     </device>
