Suppress reboot sound

--- a/custom-trio.cfg
+++ b/custom-trio.cfg
@@ -24,7 +24,8 @@
   <ind ind.pattern.powerSaving.step.1.state="0" />
 	
   <!-- Misc : a Warning Level of 1 suppresses the display of nuisance warnings (like the downstream PC is disconnected) -->
-  <up up.warningLevel="1" />
+  <!-- Misc : suppress the LOUD reboot sound -->
+  <up up.warningLevel="1" up.rebootSoundEnabled="0"/>
 	
   <!-- Enable Audible Reminder of Held Call feature -->
   <call call.hold.localReminder.enabled="1" call.hold.localReminder.period="30" call.hold.localReminder.startDelay="30" />
