Suppress LOUD rebootSound

--- a/trio-usb.cfg
+++ b/trio-usb.cfg
@@ -12,7 +12,8 @@
     <!-- Set to a 1 to enable Hold and Resume buttons during USB calls -->
     <voice voice.usb.holdResume.enable="0" />
     <!-- Misc : a Warning Level of "1" suppresses the display of nuisance warnings (like the downstream PC is disconnected) -->
-    <up up.warningLevel="1" />
+    <!-- Misc : suppress the LOUD reboot sound -->
+    <up up.warningLevel="1" up.rebootSoundEnabled="0"/>
     <!-- "0" gives a 12-hour clock, "1" is 24. The admin guide has more clock & time/date display options -->
     <lcl lcl.datetime.time.24HourClock="1" />
     <!-- Passwords and Security -->
