--- a/paging.cfg
+++ b/paging.cfg
@@ -18,8 +18,11 @@
     <!-- For more details on the image requirements see https://greiginsydney.com/optimising-polycom-vvx-background-images/ -->
     <bg bg.color.VVX410.selection="2,1" bg.color.VVX411.selection="2,1" bg.color.bm.1.name="#Your400Background.jpg#" />
     <bg bg.color.VVX500.selection="2,2" bg.color.VVX501.selection="2,2" bg.color.bm.2.name="#Your500Background.jpg#" />
-    <!-- Power Saving : disable so the screen is always live to ward off meddling fingers -->
-    <powerSaving powerSaving.enable="0" />
+    <!-- Power Saving : maximise the time the screen is on to ward off meddling fingers -->
+    <powerSaving powerSaving.enable="1" />
+    <powerSaving.officeHours powerSaving.officeHours.startHour.monday="0" powerSaving.officeHours.startHour.tuesday="0" powerSaving.officeHours.startHour.wednesday="0" powerSaving.officeHours.startHour.thursday="0" powerSaving.officeHours.startHour.friday="0" powerSaving.officeHours.startHour.saturday="0" powerSaving.officeHours.startHour.sunday="0" />
+    <powersaving.officeHours.duration powerSaving.officeHours.duration.monday="24" powerSaving.officeHours.duration.tuesday="24" powerSaving.officeHours.duration.wednesday="24" powerSaving.officeHours.duration.thursday="24" powerSaving.officeHours.duration.friday="24" powerSaving.officeHours.duration.saturday="24" powerSaving.officeHours.duration.sunday="24" />
+    <powerSaving.idleTimeout powerSaving.idleTimeout.officeHours="600" powerSaving.idleTimeout.userInputExtension="20" />
     <!-- Misc : a Warning Level of 1 suppresses nuisance warnings (like the downstream PC is disconnected) -->
     <up up.warningLevel="1" up.handsfreeMode="0" up.headsetModeEnabled="0" up.OffHookLineView.enabled="1" up.oneTouchDirectory="0" up.softkey.transferTypeOption.enabled="0" />
     <feature feature.btoe.enabled="0" feature.enhancedFeatureKeys.enabled="1" feature.deviceLock.enable="0" feature.directory.enabled="0" feature.callList.enabled="0" feature.callPark.enabled="0" />
