Removed voice.ns.hf.blocker & localConferenceEnabled
With call.localConferenceEnabled="0", you can't add participants into a MeetNow. The "+ Add" button would report "Service Unavailable".

This param is not in the Trio Admin guide so I've removed it, although it doesn't report as an error in the app.log or Settings/Status/Platform/Configuration

--- a/custom-trio.cfg
+++ b/custom-trio.cfg
@@ -3,7 +3,7 @@
   <!-- =========================================================================================== -->
   <!-- ================ custom-trio.cfg file, from https://greiginsydney.com/ TBA ================ -->
   <!-- ================== Also https://github.com/greiginsydney/000000000000.cfg ================= -->
-  <!-- ============== This unpublished version last revised 19th August 2018 ===================== -->
+  <!-- ======================= This version last revised 31st January 2019 ======================= -->
   <!-- ====== Delete all the comments from your final config file for network efficiencies! ====== -->
   <!-- =========================================================================================== -->
   <customisations>
@@ -30,7 +30,7 @@
   <!-- Enable Audible Reminder of Held Call feature -->
   <call call.hold.localReminder.enabled="1" call.hold.localReminder.period="30" call.hold.localReminder.startDelay="30" />
   <!-- Disable local conferences & set for safe & blind transfers -->
-  <call call.transferOnConferenceEnd="1" call.blindTransferSpecialInterop="1" call.defaultTransferType="Blind" call.localConferenceEnabled="0" />
+  <call call.transferOnConferenceEnd="1" call.blindTransferSpecialInterop="1" call.defaultTransferType="Blind" />
   
   <!-- Hide Sign-in/out options for a device that's meant to be left signed in. Hide by setting simplifiedSignIn to 0 and hideSignOutout to 1: -->
   <softkey softkey.feature.simplifiedSignIn="1" />
@@ -56,8 +56,6 @@
   <lcl lcl.datetime.time.24HourClock="1" />
   <!-- Volume persist settings: a "1" will retain the volume settings after each call -->
   <voice voice.volume.persist.handset="1" voice.volume.persist.headset="1" voice.volume.persist.handsfree="1" />
-  <!-- If the handsfree gating (aka the 'noise blocker') is too harsh, disable this by setting it to a "0"  -->
-  <voice voice.ns.hf.blocker="1" />
   
   <!-- 1 = Label the Line key with the number, 0 = Show the name -->
   <reg reg.1.useTelUriAsLineLabel="0" />
