--- a/customisations.cfg
+++ b/customisations.cfg
@@ -3,7 +3,7 @@
 <!-- =========================================================================================== -->
 <!-- customisations.cfg file, from https://greiginsydney.com/optimising-the-polycom-vvx-for-lync -->
 <!-- ================== Also https://github.com/greiginsydney/000000000000.cfg ================= -->
-<!-- ============== This unpublished version last revised 18th August 2018 ===================== -->
+<!-- ====================== This version last revised 2nd Feb 2019 ============================= -->
 <!-- ====== Delete all the comments from your final config file for network efficiencies! ====== -->
 <!-- =========================================================================================== -->
 <customisations>
@@ -38,8 +38,8 @@
   <feature feature.btoe.enabled="1" feature.enhancedFeatureKeys.enabled="1" feature.deviceLock.enable="0" feature.directory.enabled="1" />
   <!-- Enable Audible Reminder of Held Call feature -->
   <call call.hold.localReminder.enabled="1" call.hold.localReminder.period="30" call.hold.localReminder.startDelay="30" />
-  <!-- Disable local conferences & set for safe & blind transfers -->
-  <call call.transferOnConferenceEnd="1" call.blindTransferSpecialInterop="1" call.defaultTransferType="Blind" call.localConferenceEnabled="0"  />
+  <!-- Set for safe & blind transfers -->
+  <call call.transferOnConferenceEnd="1" call.blindTransferSpecialInterop="1" call.defaultTransferType="Blind" />
   <!-- Hide Split and NewCall keys. Note reverse logic on the Redial key: 0 *enables* it! -->
   <softkey softkey.feature.split="0" 
     softkey.feature.redial="0"
